--- a/Typescript/tic_tac_toe/index.html
+++ b/Typescript/tic_tac_toe/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8"/>
 <style>
 .title{
     font-size: 40px;
@@ -96,6 +97,7 @@ function restart(){
     <div class="point-box">
         <div class="player-sec">
             Player 1 : <span id="player1-win" class="point-display">0</span>
+            <div>O</div>
         </div>
     </div>
     <table border=1 style="display: inline-block;">
@@ -118,6 +120,7 @@ function restart(){
     <div class="point-box">
         <div class="player-sec">
             Player 2 : <span id="player2-win" class="point-display">0</span>
+            <div>X</div>
         </div>
     </div>
 <div>
